--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "helmet": "^8.0.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
     "mysql2": "^3.12.0",
     "sequelize": "^6.37.5",
